--- a/consultations.html
+++ b/consultations.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Connect with the Luxe Glow team for wholesale inquiries, media requests and skincare consultations.">
+  <meta name="description" content="Book Luxe Glow skincare consultations. Explore virtual sessions, in-studio facials and retail trainings.">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/style.css">
-  <title>Contact Luxe Glow • Partnerships &amp; Support</title>
+  <title>Luxe Glow Consultations • Virtual &amp; In-Studio</title>
 </head>
 <body>
   <header>
@@ -24,10 +24,10 @@
         <li><a href="about.html">About</a></li>
         <li><a href="products.html">Shop</a></li>
         <li><a href="journal.html">Journal</a></li>
-        <li><a href="contact.html" aria-current="page">Contact</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
       <div class="nav-actions">
-        <a class="btn btn-secondary" href="consultations.html">Book a consultation</a>
+        <a class="btn btn-secondary" href="consultations.html" aria-current="page">Book a consultation</a>
         <a class="cart-link" href="cart.html" aria-label="View cart">
           <span>🛒</span>
           <span class="cart-count" data-cart-count hidden>0</span>
@@ -38,47 +38,51 @@
 
   <main>
     <section class="page-hero">
-      <h1>We’re here to support your glow</h1>
-      <p>Reach out for wholesale partnerships, press inquiries, consultation bookings or client care. Our team responds within 2 business days.</p>
+      <h1>Personalized skincare coaching</h1>
+      <p>Our estheticians craft bespoke rituals, treatment plans and product assortments tailored to your lifestyle.</p>
     </section>
 
-    <section class="section contact-grid">
-      <div class="contact-card">
-        <h2>Contact details</h2>
+    <section class="section">
+      <div class="section-header">
+        <span class="eyebrow">Consultation menu</span>
+        <h2>Designed for clients and beauty professionals</h2>
+      </div>
+      <div class="grid-3">
+        <article class="product-card">
+          <h3>Virtual Skin Strategy</h3>
+          <p>60-minute video consultation with personalized ritual plan, product recommendations and follow-up check-in.</p>
+          <div class="price">$185</div>
+          <a class="btn btn-primary" href="mailto:consult@luxeglow.com">Reserve session</a>
+        </article>
+        <article class="product-card">
+          <h3>In-Studio Glow Facial</h3>
+          <p>90-minute corrective treatment featuring LED, sculpting massage and targeted Luxe Glow rituals.</p>
+          <div class="price">$265</div>
+          <a class="btn btn-primary" href="mailto:studio@luxeglow.com">Book appointment</a>
+        </article>
+        <article class="product-card">
+          <h3>Retail Team Training</h3>
+          <p>Half-day immersive workshop for spas and boutiques covering product education, merchandising and sales enablement.</p>
+          <div class="price">Starts at $950</div>
+          <a class="btn btn-primary" href="mailto:partners@luxeglow.com">Request proposal</a>
+        </article>
+      </div>
+    </section>
+
+    <section class="section split">
+      <div class="hero-card">
+        <h3>What to expect</h3>
         <ul class="footer-links">
-          <li>Email: <a href="mailto:hello@luxeglow.com">hello@luxeglow.com</a></li>
-          <li>Wholesale: <a href="mailto:partners@luxeglow.com">partners@luxeglow.com</a></li>
-          <li>Media: <a href="mailto:press@luxeglow.com">press@luxeglow.com</a></li>
-          <li>Phone: <a href="tel:+13125551234">+1 (312) 555-1234</a></li>
+          <li>Comprehensive skin analysis and lifestyle review</li>
+          <li>Customized ritual blueprint delivered within 48 hours</li>
+          <li>Exclusive access to partner-only product bundles</li>
         </ul>
-        <p>Studio address: 2458 Fulton Market, Chicago, IL 60607</p>
-        <p>Visit our <a href="faq.html">FAQ</a> for quick answers about orders, shipping and product guidance.</p>
       </div>
       <div>
-        <form class="contact-form" action="#" method="post">
-          <h2>Send us a note</h2>
-          <label for="name">Name</label>
-          <input id="name" name="name" type="text" required>
-          <label for="email">Email</label>
-          <input id="email" name="email" type="email" required>
-          <label for="topic">Inquiry type</label>
-          <select id="topic" name="topic">
-            <option value="partnerships">Partnerships</option>
-            <option value="press">Press</option>
-            <option value="consultations">Consultations</option>
-            <option value="client-care">Client care</option>
-          </select>
-          <label for="message">How can we help?</label>
-          <textarea id="message" name="message" rows="5" required></textarea>
-          <button class="btn btn-primary" type="submit">Submit</button>
-        </form>
+        <h2>Secure booking</h2>
+        <p>All consultations are managed through our encrypted booking portal with PCI-compliant payment processing. You’ll receive a confirmation email with preparation details and a secure intake form.</p>
+        <a class="btn btn-secondary" href="contact.html">Talk with our concierge</a>
       </div>
-    </section>
-
-    <section class="section contact-cta">
-      <h2>Prefer a personal consultation?</h2>
-      <p>Reserve a 45-minute session with a Luxe Glow esthetician for in-depth ritual building and treatment planning.</p>
-      <a class="btn btn-secondary" href="consultations.html">View consultation menu</a>
     </section>
   </main>
 
