--- a/journal.html
+++ b/journal.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Connect with the Luxe Glow team for wholesale inquiries, media requests and skincare consultations.">
+  <meta name="description" content="Luxe Glow Journal shares esthetician insights, ingredient education and rituals to help you build resilient, radiant skin.">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/style.css">
-  <title>Contact Luxe Glow • Partnerships &amp; Support</title>
+  <title>Luxe Glow Journal • Skin Education &amp; Rituals</title>
 </head>
 <body>
   <header>
@@ -23,8 +23,8 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="products.html">Shop</a></li>
-        <li><a href="journal.html">Journal</a></li>
-        <li><a href="contact.html" aria-current="page">Contact</a></li>
+        <li><a href="journal.html" aria-current="page">Journal</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
       <div class="nav-actions">
         <a class="btn btn-secondary" href="consultations.html">Book a consultation</a>
@@ -38,47 +38,31 @@
 
   <main>
     <section class="page-hero">
-      <h1>We’re here to support your glow</h1>
-      <p>Reach out for wholesale partnerships, press inquiries, consultation bookings or client care. Our team responds within 2 business days.</p>
+      <h1>Insights from the treatment room</h1>
+      <p>Articles curated by our esthetician collective featuring ingredient deep-dives, protocol blueprints and mindful rituals.</p>
     </section>
 
-    <section class="section contact-grid">
-      <div class="contact-card">
-        <h2>Contact details</h2>
-        <ul class="footer-links">
-          <li>Email: <a href="mailto:hello@luxeglow.com">hello@luxeglow.com</a></li>
-          <li>Wholesale: <a href="mailto:partners@luxeglow.com">partners@luxeglow.com</a></li>
-          <li>Media: <a href="mailto:press@luxeglow.com">press@luxeglow.com</a></li>
-          <li>Phone: <a href="tel:+13125551234">+1 (312) 555-1234</a></li>
-        </ul>
-        <p>Studio address: 2458 Fulton Market, Chicago, IL 60607</p>
-        <p>Visit our <a href="faq.html">FAQ</a> for quick answers about orders, shipping and product guidance.</p>
-      </div>
-      <div>
-        <form class="contact-form" action="#" method="post">
-          <h2>Send us a note</h2>
-          <label for="name">Name</label>
-          <input id="name" name="name" type="text" required>
-          <label for="email">Email</label>
-          <input id="email" name="email" type="email" required>
-          <label for="topic">Inquiry type</label>
-          <select id="topic" name="topic">
-            <option value="partnerships">Partnerships</option>
-            <option value="press">Press</option>
-            <option value="consultations">Consultations</option>
-            <option value="client-care">Client care</option>
-          </select>
-          <label for="message">How can we help?</label>
-          <textarea id="message" name="message" rows="5" required></textarea>
-          <button class="btn btn-primary" type="submit">Submit</button>
-        </form>
-      </div>
+    <section class="section rich-text" id="barrier-first">
+      <h2>The barrier-first philosophy</h2>
+      <p>Healthy skin begins with a fortified barrier. When lipids and ceramides are depleted, inflammation rises and active ingredients become less effective. Our approach prioritizes strengthening and replenishing before introducing high-dose actives.</p>
+      <ul>
+        <li>Double cleanse with pH-balanced formulas to preserve microbiome harmony.</li>
+        <li>Layer humectants like glycerin and polyglutamic acid under occlusive lipids.</li>
+        <li>Incorporate peptides and niacinamide to boost barrier resilience.</li>
+      </ul>
+      <p>Recommended ritual: Enzyme Cloud Cleanser, Radiance Renewal Serum and Peptide Barrier Cream.</p>
     </section>
 
-    <section class="section contact-cta">
-      <h2>Prefer a personal consultation?</h2>
-      <p>Reserve a 45-minute session with a Luxe Glow esthetician for in-depth ritual building and treatment planning.</p>
-      <a class="btn btn-secondary" href="consultations.html">View consultation menu</a>
+    <section class="section rich-text" id="vitamin-c">
+      <h2>Vitamin C decoded</h2>
+      <p>Vitamin C is a powerhouse antioxidant with multiple derivatives. We stabilize L-ascorbic acid with ferulic acid and vitamin E while offering tetrahexyldecyl ascorbate for sensitive skin types. Both deliver brightening and collagen support without oxidation risk.</p>
+      <p>Pro-tip: Apply vitamin C in the morning beneath SPF to neutralize free radicals and amplify UV protection.</p>
+    </section>
+
+    <section class="section rich-text" id="seasonal-rituals">
+      <h2>Building rituals for every season</h2>
+      <p>Climate shifts demand mindful product rotations. Transitioning from humid summers to dry winters? Increase lipid-rich moisturizers, incorporate overnight masks and maintain consistent SPF. During warmer months, focus on lightweight hydrators and antioxidant mists.</p>
+      <p>Our seasonal ritual guides are updated quarterly—subscribe to the newsletter to receive them in your inbox.</p>
     </section>
   </main>
 
