--- a/shipping-returns.html
+++ b/shipping-returns.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Connect with the Luxe Glow team for wholesale inquiries, media requests and skincare consultations.">
+  <meta name="description" content="Learn about Luxe Glow shipping timelines, international delivery, returns and exchanges.">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/style.css">
-  <title>Contact Luxe Glow • Partnerships &amp; Support</title>
+  <title>Shipping &amp; Returns • Luxe Glow</title>
 </head>
 <body>
   <header>
@@ -24,7 +24,7 @@
         <li><a href="about.html">About</a></li>
         <li><a href="products.html">Shop</a></li>
         <li><a href="journal.html">Journal</a></li>
-        <li><a href="contact.html" aria-current="page">Contact</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
       <div class="nav-actions">
         <a class="btn btn-secondary" href="consultations.html">Book a consultation</a>
@@ -38,47 +38,35 @@
 
   <main>
     <section class="page-hero">
-      <h1>We’re here to support your glow</h1>
-      <p>Reach out for wholesale partnerships, press inquiries, consultation bookings or client care. Our team responds within 2 business days.</p>
+      <h1>Shipping &amp; returns</h1>
+      <p>Transparent policies designed to provide a seamless experience from our studio to your doorstep.</p>
     </section>
 
-    <section class="section contact-grid">
-      <div class="contact-card">
-        <h2>Contact details</h2>
-        <ul class="footer-links">
-          <li>Email: <a href="mailto:hello@luxeglow.com">hello@luxeglow.com</a></li>
-          <li>Wholesale: <a href="mailto:partners@luxeglow.com">partners@luxeglow.com</a></li>
-          <li>Media: <a href="mailto:press@luxeglow.com">press@luxeglow.com</a></li>
-          <li>Phone: <a href="tel:+13125551234">+1 (312) 555-1234</a></li>
-        </ul>
-        <p>Studio address: 2458 Fulton Market, Chicago, IL 60607</p>
-        <p>Visit our <a href="faq.html">FAQ</a> for quick answers about orders, shipping and product guidance.</p>
-      </div>
-      <div>
-        <form class="contact-form" action="#" method="post">
-          <h2>Send us a note</h2>
-          <label for="name">Name</label>
-          <input id="name" name="name" type="text" required>
-          <label for="email">Email</label>
-          <input id="email" name="email" type="email" required>
-          <label for="topic">Inquiry type</label>
-          <select id="topic" name="topic">
-            <option value="partnerships">Partnerships</option>
-            <option value="press">Press</option>
-            <option value="consultations">Consultations</option>
-            <option value="client-care">Client care</option>
-          </select>
-          <label for="message">How can we help?</label>
-          <textarea id="message" name="message" rows="5" required></textarea>
-          <button class="btn btn-primary" type="submit">Submit</button>
-        </form>
-      </div>
-    </section>
+    <section class="rich-text">
+      <h2>Shipping timelines</h2>
+      <p>All orders are processed within 2 business days. During peak launches, please allow up to 4 business days. You’ll receive a tracking link the moment your ritual leaves our carbon-neutral facility.</p>
+      <h3>Domestic delivery (U.S.)</h3>
+      <ul>
+        <li>Standard: 3–5 business days via UPS Carbon Neutral.</li>
+        <li>Expedited: 2 business days via FedEx Priority.</li>
+        <li>Complimentary shipping on orders over $150.</li>
+      </ul>
+      <h3>International delivery</h3>
+      <p>We ship to over 35 countries with duties and taxes calculated at checkout. Delivery estimates range from 5–10 business days depending on region.</p>
 
-    <section class="section contact-cta">
-      <h2>Prefer a personal consultation?</h2>
-      <p>Reserve a 45-minute session with a Luxe Glow esthetician for in-depth ritual building and treatment planning.</p>
-      <a class="btn btn-secondary" href="consultations.html">View consultation menu</a>
+      <h2>Returns &amp; exchanges</h2>
+      <p>If a product isn’t the perfect match, we accept returns on unused and gently used items within 30 days of delivery. To initiate a return, email <a href="mailto:care@luxeglow.com">care@luxeglow.com</a> with your order number.</p>
+      <ul>
+        <li>Refunds are issued to the original payment method within 7 business days of receiving your return.</li>
+        <li>Exchanges ship once the original item is received and inspected.</li>
+        <li>Sale items and limited edition collaborations are final sale unless defective.</li>
+      </ul>
+
+      <h2>Damaged or missing items</h2>
+      <p>Please inspect your order upon receipt. If you discover damage or a missing item, contact us within 7 days with photos so we can arrange a replacement swiftly.</p>
+
+      <h2>Carbon-neutral fulfillment</h2>
+      <p>Every shipment is offset through certified climate projects. Packaging is primarily recyclable glass and FSC-certified paper—please recycle or reuse whenever possible.</p>
     </section>
   </main>
 
