--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Connect with the Luxe Glow team for wholesale inquiries, media requests and skincare consultations.">
+  <meta name="description" content="Review Luxe Glow’s terms of service including purchasing policies, liability limitations and governing law.">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/style.css">
-  <title>Contact Luxe Glow • Partnerships &amp; Support</title>
+  <title>Terms of Service • Luxe Glow</title>
 </head>
 <body>
   <header>
@@ -24,7 +24,7 @@
         <li><a href="about.html">About</a></li>
         <li><a href="products.html">Shop</a></li>
         <li><a href="journal.html">Journal</a></li>
-        <li><a href="contact.html" aria-current="page">Contact</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
       <div class="nav-actions">
         <a class="btn btn-secondary" href="consultations.html">Book a consultation</a>
@@ -38,47 +38,40 @@
 
   <main>
     <section class="page-hero">
-      <h1>We’re here to support your glow</h1>
-      <p>Reach out for wholesale partnerships, press inquiries, consultation bookings or client care. Our team responds within 2 business days.</p>
+      <h1>Terms of service</h1>
+      <p>Clear guidelines governing your use of Luxe Glow’s digital platforms, services and product purchases.</p>
     </section>
 
-    <section class="section contact-grid">
-      <div class="contact-card">
-        <h2>Contact details</h2>
-        <ul class="footer-links">
-          <li>Email: <a href="mailto:hello@luxeglow.com">hello@luxeglow.com</a></li>
-          <li>Wholesale: <a href="mailto:partners@luxeglow.com">partners@luxeglow.com</a></li>
-          <li>Media: <a href="mailto:press@luxeglow.com">press@luxeglow.com</a></li>
-          <li>Phone: <a href="tel:+13125551234">+1 (312) 555-1234</a></li>
-        </ul>
-        <p>Studio address: 2458 Fulton Market, Chicago, IL 60607</p>
-        <p>Visit our <a href="faq.html">FAQ</a> for quick answers about orders, shipping and product guidance.</p>
-      </div>
-      <div>
-        <form class="contact-form" action="#" method="post">
-          <h2>Send us a note</h2>
-          <label for="name">Name</label>
-          <input id="name" name="name" type="text" required>
-          <label for="email">Email</label>
-          <input id="email" name="email" type="email" required>
-          <label for="topic">Inquiry type</label>
-          <select id="topic" name="topic">
-            <option value="partnerships">Partnerships</option>
-            <option value="press">Press</option>
-            <option value="consultations">Consultations</option>
-            <option value="client-care">Client care</option>
-          </select>
-          <label for="message">How can we help?</label>
-          <textarea id="message" name="message" rows="5" required></textarea>
-          <button class="btn btn-primary" type="submit">Submit</button>
-        </form>
-      </div>
-    </section>
+    <section class="rich-text">
+      <h2>1. Acceptance of terms</h2>
+      <p>By accessing luxeglow.com or purchasing our products, you agree to the Terms of Service outlined here and to our Privacy Policy.</p>
 
-    <section class="section contact-cta">
-      <h2>Prefer a personal consultation?</h2>
-      <p>Reserve a 45-minute session with a Luxe Glow esthetician for in-depth ritual building and treatment planning.</p>
-      <a class="btn btn-secondary" href="consultations.html">View consultation menu</a>
+      <h2>2. Eligibility</h2>
+      <p>You must be at least 18 years old, or the age of majority in your jurisdiction, to make purchases. By placing an order, you confirm you meet the applicable age requirements.</p>
+
+      <h2>3. Product information</h2>
+      <p>We aim to describe products accurately. However, minor variations in packaging may occur. We reserve the right to discontinue products at any time.</p>
+
+      <h2>4. Billing &amp; payment</h2>
+      <p>All prices are listed in USD unless otherwise indicated. Payments are processed via secure, PCI-compliant gateways. Luxe Glow may cancel any order suspected of fraud.</p>
+
+      <h2>5. Shipping &amp; returns</h2>
+      <p>Shipping timelines, costs and return policies are detailed on our <a href="shipping-returns.html">Shipping &amp; Returns</a> page. By completing a purchase, you acknowledge those policies.</p>
+
+      <h2>6. Intellectual property</h2>
+      <p>All content, trademarks and product names on luxeglow.com are property of Luxe Glow and may not be used without permission.</p>
+
+      <h2>7. Limitation of liability</h2>
+      <p>Luxe Glow is not liable for indirect or incidental damages resulting from the use of our products or website. Our total liability will not exceed the amount paid for the product in question.</p>
+
+      <h2>8. Governing law</h2>
+      <p>These terms are governed by the laws of the State of Illinois, without regard to conflict of law principles.</p>
+
+      <h2>9. Changes to terms</h2>
+      <p>We may update these terms periodically. Continued use of the site after changes constitutes acceptance of the revised terms.</p>
+
+      <h2>10. Contact</h2>
+      <p>Questions regarding these terms can be sent to <a href="mailto:legal@luxeglow.com">legal@luxeglow.com</a>.</p>
     </section>
   </main>
 
