--- a/faq.html
+++ b/faq.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Connect with the Luxe Glow team for wholesale inquiries, media requests and skincare consultations.">
+  <meta name="description" content="Find answers about Luxe Glow skincare, shipping, returns and product usage.">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/style.css">
-  <title>Contact Luxe Glow • Partnerships &amp; Support</title>
+  <title>Luxe Glow FAQ • Orders, Products &amp; Care</title>
 </head>
 <body>
   <header>
@@ -24,7 +24,7 @@
         <li><a href="about.html">About</a></li>
         <li><a href="products.html">Shop</a></li>
         <li><a href="journal.html">Journal</a></li>
-        <li><a href="contact.html" aria-current="page">Contact</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
       <div class="nav-actions">
         <a class="btn btn-secondary" href="consultations.html">Book a consultation</a>
@@ -38,47 +38,46 @@
 
   <main>
     <section class="page-hero">
-      <h1>We’re here to support your glow</h1>
-      <p>Reach out for wholesale partnerships, press inquiries, consultation bookings or client care. Our team responds within 2 business days.</p>
+      <h1>Frequently asked questions</h1>
+      <p>Explore answers to common questions about product usage, shipping, returns and sustainability commitments.</p>
     </section>
 
-    <section class="section contact-grid">
-      <div class="contact-card">
-        <h2>Contact details</h2>
-        <ul class="footer-links">
-          <li>Email: <a href="mailto:hello@luxeglow.com">hello@luxeglow.com</a></li>
-          <li>Wholesale: <a href="mailto:partners@luxeglow.com">partners@luxeglow.com</a></li>
-          <li>Media: <a href="mailto:press@luxeglow.com">press@luxeglow.com</a></li>
-          <li>Phone: <a href="tel:+13125551234">+1 (312) 555-1234</a></li>
-        </ul>
-        <p>Studio address: 2458 Fulton Market, Chicago, IL 60607</p>
-        <p>Visit our <a href="faq.html">FAQ</a> for quick answers about orders, shipping and product guidance.</p>
-      </div>
-      <div>
-        <form class="contact-form" action="#" method="post">
-          <h2>Send us a note</h2>
-          <label for="name">Name</label>
-          <input id="name" name="name" type="text" required>
-          <label for="email">Email</label>
-          <input id="email" name="email" type="email" required>
-          <label for="topic">Inquiry type</label>
-          <select id="topic" name="topic">
-            <option value="partnerships">Partnerships</option>
-            <option value="press">Press</option>
-            <option value="consultations">Consultations</option>
-            <option value="client-care">Client care</option>
-          </select>
-          <label for="message">How can we help?</label>
-          <textarea id="message" name="message" rows="5" required></textarea>
-          <button class="btn btn-primary" type="submit">Submit</button>
-        </form>
+    <section class="section">
+      <div class="accordion" role="region" aria-label="Product questions">
+        <div class="accordion-item">
+          <button class="accordion-summary" type="button">Are your products fragrance-free?<span aria-hidden="true">+</span></button>
+          <div class="accordion-content">Yes. Luxe Glow formulations are free from synthetic fragrance and essential oils. Any scent comes naturally from botanical extracts.</div>
+        </div>
+        <div class="accordion-item">
+          <button class="accordion-summary" type="button">What is the shelf life?<span aria-hidden="true">+</span></button>
+          <div class="accordion-content">Unopened products last 24 months. After opening, we recommend using within 12 months for optimal potency.</div>
+        </div>
+        <div class="accordion-item">
+          <button class="accordion-summary" type="button">Do you test on animals?<span aria-hidden="true">+</span></button>
+          <div class="accordion-content">Never. We are Leaping Bunny certified and do not sell in regions that require animal testing.</div>
+        </div>
       </div>
     </section>
 
-    <section class="section contact-cta">
-      <h2>Prefer a personal consultation?</h2>
-      <p>Reserve a 45-minute session with a Luxe Glow esthetician for in-depth ritual building and treatment planning.</p>
-      <a class="btn btn-secondary" href="consultations.html">View consultation menu</a>
+    <section class="section">
+      <div class="section-header">
+        <span class="eyebrow">Orders &amp; shipping</span>
+        <h2>Worldwide delivery with transparency</h2>
+      </div>
+      <div class="benefits-grid">
+        <article class="benefit-card">
+          <h3>Processing times</h3>
+          <p>Orders ship within 2 business days from our carbon-neutral facility. Tracking details are emailed immediately.</p>
+        </article>
+        <article class="benefit-card">
+          <h3>International shipping</h3>
+          <p>We ship to 35 countries. Duties and taxes are calculated at checkout to avoid surprises.</p>
+        </article>
+        <article class="benefit-card">
+          <h3>Return policy</h3>
+          <p>Unused products may be returned within 30 days. Start a return via <a href="mailto:care@luxeglow.com">care@luxeglow.com</a>.</p>
+        </article>
+      </div>
     </section>
   </main>
 
