--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,153 +1,128 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Luxe Glow privacy policy outlining data collection, usage, and protection practices for customers and partners." />
-    <title>Privacy Policy | Luxe Glow</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="assets/css/main.css" />
-    <link rel="icon" type="image/png" href="favicon.ico" />
-    <script defer src="assets/js/products.js"></script>
-    <script defer src="assets/js/cart.js"></script>
-    <script defer src="assets/js/main.js"></script>
-  </head>
-  <body>
-    <header class="site-header">
-      <div class="wrapper site-header__inner">
-        <a class="brand" href="index.html">Luxe Glow</a>
-        <nav class="nav" data-nav>
-          <a href="index.html">Home</a>
-          <a href="collections.html">Shop</a>
-          <a href="about.html">About</a>
-          <a href="consultation.html">Consultation</a>
-          <a href="contact.html">Contact</a>
-          <a href="blog.html">Glow Guide</a>
-        </nav>
-        <div class="header-actions">
-          <a class="btn btn--ghost" href="collections.html">Shop rituals</a>
-          <span class="header-divider" aria-hidden="true"></span>
-          <a class="btn btn--ghost cart-button" href="cart.html" aria-label="View cart">
-            <span>Cart</span>
-            <span class="badge" data-cart-count>0</span>
-          </a>
-          <button class="nav__mobile-toggle" type="button" data-nav-toggle aria-expanded="false" aria-label="Toggle menu">
-            ☰
-          </button>
-        </div>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Understand how Luxe Glow collects, uses and protects your personal data across digital experiences and purchases.">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="assets/css/style.css">
+  <title>Privacy Policy • Luxe Glow</title>
+</head>
+<body>
+  <header>
+    <nav class="navbar" aria-label="Primary">
+      <a class="brand" href="index.html">Luxe Glow</a>
+      <button class="menu-toggle" type="button" data-menu-toggle aria-expanded="false" aria-controls="primary-navigation">
+        <span class="sr-only">Toggle navigation</span>
+        &#9776;
+      </button>
+      <ul class="nav-links" id="primary-navigation">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="products.html">Shop</a></li>
+        <li><a href="journal.html">Journal</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+      <div class="nav-actions">
+        <a class="btn btn-secondary" href="consultations.html">Book a consultation</a>
+        <a class="cart-link" href="cart.html" aria-label="View cart">
+          <span>🛒</span>
+          <span class="cart-count" data-cart-count hidden>0</span>
+        </a>
       </div>
-    </header>
+    </nav>
+  </header>
 
-    <main>
-      <section class="page-hero">
-        <div class="wrapper">
-          <p class="section__label">Privacy</p>
-          <h1 class="page-hero__title">Luxe Glow Privacy Policy</h1>
-          <p class="page-hero__description">Last updated: January 5, 2026</p>
-        </div>
-      </section>
+  <main>
+    <section class="page-hero">
+      <h1>Privacy policy</h1>
+      <p>We are committed to safeguarding your personal information and maintaining transparent practices across all Luxe Glow services.</p>
+    </section>
 
-      <section class="section">
-        <div class="wrapper stack">
-          <p>
-            Luxe Glow LLC ("Luxe Glow", "we") respects your privacy. This policy explains how we collect, use, and protect your
-            information when you visit our website, purchase products, or interact with our team.
-          </p>
-          <h2>1. Information we collect</h2>
-          <ul>
-            <li><strong>Personal details:</strong> Name, email, phone number, shipping/billing address.</li>
-            <li><strong>Order information:</strong> Products purchased, transaction totals, payment status.</li>
-            <li><strong>Usage data:</strong> IP address, device type, browser, and analytics metrics collected via cookies.</li>
-            <li><strong>Communications:</strong> Messages submitted through forms, email, or SMS channels.</li>
-          </ul>
-          <h2>2. How we use information</h2>
-          <ul>
-            <li>Process orders, payments, and fulfillment.</li>
-            <li>Respond to support requests and consultations.</li>
-            <li>Send marketing updates with your consent (opt-out anytime).</li>
-            <li>Improve website performance and product development.</li>
-            <li>Detect and prevent fraud or misuse.</li>
-          </ul>
-          <h2>3. Cookies &amp; tracking</h2>
-          <p>
-            We use cookies and similar technologies to remember preferences, measure site performance, and personalize content.
-            You can adjust cookie settings in your browser; disabling cookies may impact functionality.
-          </p>
-          <h2>4. Third-party services</h2>
-          <p>
-            We work with vetted partners for payment processing (Stripe, Shopify), analytics (Google Analytics), email marketing
-            (Klaviyo), and customer support (Zendesk). These partners only access data necessary to perform their services.
-          </p>
-          <h2>5. Data retention</h2>
-          <p>
-            We retain customer records for as long as needed to fulfill purchases, comply with legal obligations, and maintain
-            our relationship. You may request deletion of personal data by emailing <a href="mailto:privacy@luxeglow.com"
-              >privacy@luxeglow.com</a
-            >.
-          </p>
-          <h2>6. Your rights</h2>
-          <p>
-            Depending on your jurisdiction, you may request access, correction, deletion, or restriction of your personal data.
-            EU/EEA residents can contact our DPO at <a href="mailto:dpo@luxeglow.com">dpo@luxeglow.com</a> to exercise GDPR
-            rights.
-          </p>
-          <h2>7. Data security</h2>
-          <p>
-            We employ encryption, secure hosting, and access controls to protect your data. While we follow best practices, no
-            transmission is entirely secure—please use discretion when sharing sensitive information.
-          </p>
-          <h2>8. Policy updates</h2>
-          <p>
-            We may update this policy periodically. Material changes will be announced via email or site notification. Continued
-            use of our services indicates acceptance of the updated policy.
-          </p>
-          <p>
-            Questions? Email <a href="mailto:privacy@luxeglow.com">privacy@luxeglow.com</a> or write to 1840 Sunset Blvd, Los
-            Angeles, CA 90026.
-          </p>
-        </div>
-      </section>
-    </main>
+    <section class="rich-text">
+      <p><strong>Effective date:</strong> March 1, 2024</p>
+      <h2>Information we collect</h2>
+      <p>We collect information you provide directly to us, such as contact details, order history, consultation notes and payment information processed through encrypted gateways. We also collect technical data including device type, browser, IP address and site usage via cookies.</p>
 
-    <footer class="site-footer">
-      <div class="wrapper">
-        <div class="site-footer__upper">
-          <div class="footer-brand">
-            <a class="brand" href="index.html">Luxe Glow</a>
-            <p>
-              Luxe Glow is a modern skin health studio and product line delivering high-performance rituals that honor skin,
-              soul, and sustainability.
-            </p>
-          </div>
-          <div class="footer-nav">
-            <strong>Navigation</strong>
-            <a href="collections.html">Shop</a>
-            <a href="about.html">About</a>
-            <a href="consultation.html">Consultation</a>
-            <a href="blog.html">Glow Guide</a>
-            <a href="contact.html">Contact</a>
-          </div>
-          <div class="footer-links">
-            <strong>Support</strong>
-            <a href="privacy-policy.html" aria-current="page">Privacy policy</a>
-            <a href="terms.html">Terms of service</a>
-            <a href="returns.html">Returns &amp; exchanges</a>
-            <a href="wholesale.html">Wholesale program</a>
-          </div>
-          <div class="footer-links">
-            <strong>Contact</strong>
-            <span>hello@luxeglow.com</span>
-            <span>+1 (213) 555-0198</span>
-            <span>Los Angeles • Austin • Remote</span>
-          </div>
-        </div>
-        <div class="site-footer__bottom">
-          <span>&copy; <span data-year></span> Luxe Glow. All rights reserved.</span>
-          <span>Crafted with intention for skin entrepreneurs worldwide.</span>
-        </div>
+      <h2>How we use your information</h2>
+      <ul>
+        <li>Process and fulfill orders, consultations and subscription services.</li>
+        <li>Provide personalized skincare recommendations and customer support.</li>
+        <li>Send marketing communications you opt into, with the ability to opt out anytime.</li>
+        <li>Monitor analytics to improve site performance and product development.</li>
+      </ul>
+
+      <h2>Data sharing</h2>
+      <p>We share data only with trusted partners that help us operate our business, such as payment processors, shipping carriers and marketing platforms. These partners are contractually bound to protect your data. We never sell personal information.</p>
+
+      <h2>Cookies &amp; tracking</h2>
+      <p>Cookies help personalize your experience and understand usage patterns. You can adjust cookie preferences in your browser or via our cookie banner when visiting the site.</p>
+
+      <h2>Your rights</h2>
+      <p>Depending on your location, you may request access, correction or deletion of your personal data. Submit requests to <a href="mailto:privacy@luxeglow.com">privacy@luxeglow.com</a>. We verify identity before processing requests.</p>
+
+      <h2>Data retention</h2>
+      <p>We retain customer data for as long as necessary to provide services, comply with legal obligations and resolve disputes. Transaction records are stored for at least seven years for accounting compliance.</p>
+
+      <h2>Security practices</h2>
+      <p>Our infrastructure uses SSL encryption, role-based access controls, regular vulnerability scans and PCI DSS compliant payment processing.</p>
+
+      <h2>International data transfers</h2>
+      <p>When transferring data outside your region, we implement appropriate safeguards such as Standard Contractual Clauses.</p>
+
+      <h2>Updates to this policy</h2>
+      <p>We may update this policy periodically. Changes are posted here with a revised effective date. Material updates will also be emailed to subscribers.</p>
+
+      <h2>Contact</h2>
+      <p>For privacy questions or concerns, email <a href="mailto:privacy@luxeglow.com">privacy@luxeglow.com</a> or write to: Luxe Glow Privacy Office, 2458 Fulton Market, Chicago, IL 60607.</p>
+    </section>
+  </main>
+
+  <footer>
+    <div class="footer-top">
+      <div class="footer-brand">
+        <h4>Luxe Glow</h4>
+        <p>Science-backed rituals rooted in spa heritage, designed by esthetician and founder Noelle James.</p>
       </div>
-    </footer>
-  </body>
+      <div>
+        <h5>Company</h5>
+        <ul class="footer-links">
+          <li><a href="about.html">About</a></li>
+          <li><a href="journal.html">Journal</a></li>
+          <li><a href="contact.html">Contact</a></li>
+          <li><a href="consultations.html">Consultations</a></li>
+        </ul>
+      </div>
+      <div>
+        <h5>Support</h5>
+        <ul class="footer-links">
+          <li><a href="faq.html">FAQ</a></li>
+          <li><a href="shipping-returns.html">Shipping &amp; returns</a></li>
+          <li><a href="privacy-policy.html">Privacy policy</a></li>
+          <li><a href="terms-of-service.html">Terms of service</a></li>
+        </ul>
+      </div>
+      <div>
+        <h5>Newsletter</h5>
+        <p>Join the glow letters for launch alerts, skin education and special events.</p>
+        <form class="contact-form" action="#" method="post">
+          <label class="sr-only" for="newsletter-email">Email address</label>
+          <input id="newsletter-email" name="email" type="email" placeholder="you@example.com" required>
+          <button class="btn btn-primary" type="submit">Subscribe</button>
+        </form>
+      </div>
+    </div>
+    <div class="footer-bottom">
+      <p>&copy; <span id="current-year"></span> Luxe Glow. All rights reserved.</p>
+    </div>
+  </footer>
+
+  <script>
+    document.getElementById('current-year').textContent = new Date().getFullYear();
+  </script>
+  <script defer src="assets/js/app.js"></script>
+</body>
 </html>
